--- a/FE/issue-tracker/package.json
+++ b/FE/issue-tracker/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.20.14",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
