chore:🔧 gitignore의 *.xcodeproj 주석처리

--- a/iOS/.gitignore
+++ b/iOS/.gitignore
@@ -77,7 +77,7 @@ Packages
 .build/
 xcuserdata
 DerivedData/
-*.xcodeproj
+# *.xcodeproj
 
 # fastlane
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
