Chore: #1 절대경로 추가 설정

--- a/FE/issue-tracker/tsconfig.path.json
+++ b/FE/issue-tracker/tsconfig.path.json
@@ -8,6 +8,8 @@
       "@assets/*":["assets/*"],
       "@recoil/*":["recoil/*"],
       "@utils/*":["utils/*"],
+      "@store/*":["store/*"],
+      "@const/*":["const/*"],
     }
   }
 }
