--- a/frontend/issue-cracker/package.json
+++ b/frontend/issue-cracker/package.json
@@ -3,12 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-<<<<<<< Updated upstream
-=======
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material/button": "^11.0.0",
->>>>>>> Stashed changes
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,10 +13,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
