--- a/be/issue-tracker-be/src/main/resources/application.properties
+++ b/be/issue-tracker-be/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+# h2
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL;INIT=CREATE SCHEMA IF NOT EXISTS `issue_tracker`\\;SET SCHEMA issue_tracker;
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.sql.init.enabled=true
