Feat: 페이지 컴포넌트 초기세팅 #16

--- a/fe/client/tsconfig.paths.json
+++ b/fe/client/tsconfig.paths.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@Components/*": ["src/Components/*"]
+      "@components/*": ["src/components/*"]
     }
   }
 }
