--- a/BE/issue_tracker/src/main/resources/application.properties
+++ b/BE/issue_tracker/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/issue_tracker?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=yeon
-spring.datasource.password=shion
+spring.datasource.url=${MYSQL_HOST}:${MYSQL_PORT}/issue_tracker?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
