--- a/frontend/issue-cracker/package.json
+++ b/frontend/issue-cracker/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.10",
     "@types/react-dom": "^17.0.7",
     "@types/styled-components": "^5.1.9",
+    "jwt-decode": "^3.1.2",
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
