--- a/BE/issue_tracker/src/main/resources/application.properties
+++ b/BE/issue_tracker/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url=${MYSQL_HOST}:${MYSQL_PORT}/issue_tracker?serverTimezone=U
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
