[#17] feat: :sparkles: mysql 연동

--- a/BE/server/src/main/resources/application.properties
+++ b/BE/server/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+#mysql 셋팅
+spring.datasource.url=jdbc:mysql://localhost:3306/issue_tracker?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=dev
+spring.datasource.password=dev1234
+spring.datasource.initialization-mode=always
