chore : json serialize시 네이밍 전략 snake_case로 설정

--- a/BE/issue_tracker/src/main/resources/application.properties
+++ b/BE/issue_tracker/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=${MYSQL_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
+
+spring.jackson.property-naming-strategy=SNAKE_CASE
+
