--- a/BE/issue_tracker/src/main/resources/application.properties
+++ b/BE/issue_tracker/src/main/resources/application.properties
@@ -6,5 +6,8 @@ spring.datasource.password=${MYSQL_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
 
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=debug
+
 spring.jackson.property-naming-strategy=SNAKE_CASE
 
