feat : 마일스톤 GET API 생성

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## data
-spring.datasource.schema=classpath:schema.sql
-spring.datasource.initialization-mode=always
+#spring.datasource.schema=classpath:schema.sql
+#spring.datasource.initialization-mode=always
 ##debug
-logging.level.com.codesquad.cocomarco=debug
+logging.level.com.codesqaude.cocomarco=debug
 logging.level.sql=DEBUG
