--- a/be/issue-tracker-be/src/main/resources/application.properties
+++ b/be/issue-tracker-be/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.sql.init.enabled=true
+
+server.error.include-binding-errors=always
+server.error.include-message=always
