--- a/iOS/issueTrackerApp/issueTrackerApp/Info.plist
+++ b/iOS/issueTrackerApp/issueTrackerApp/Info.plist
@@ -25,7 +25,7 @@
 			<string>com.zombietux.issueTrackerApp</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>issuetarcker://issuetarcker</string>
+				<string>issuetracker</string>
 			</array>
 		</dict>
 	</array>
