--- a/BE/server/.gitignore
+++ b/BE/server/.gitignore
@@ -4,6 +4,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+server/src/main/resources/oauth.properties
+
 ### STS ###
 .apt_generated
 .classpath
