--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.3.1",
     "styled-components": "^5.3.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.2",
