chore: (#30) querydsl 의존성 추가, .gitignore 업데이트

--- a/.gitignore
+++ b/.gitignore
@@ -95,4 +95,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Querydsl
+generated
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows
