--- a/fe/client/.eslintrc
+++ b/fe/client/.eslintrc
@@ -2,8 +2,13 @@
   "extends": [
     "react-app"
   ],
+  "plugins": [
+    "react-hooks"
+  ],
   "rules": {
     "no-use-before-define":"off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "off",
     "@typescript-eslint/no-use-before-define": ["error"]
   }
 }
