[#30] feat: :sparkles: jwtToken 발행하기 구현

--- a/BE/server/build.gradle
+++ b/BE/server/build.gradle
@@ -19,6 +19,9 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     runtimeOnly 'mysql:mysql-connector-java'
+
+    implementation 'com.auth0:java-jwt:3.16.0'
+
 }
 
 test {
