--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.defer-datasource-initialization=true
 # logging
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 server.error.include-message=always
+
 # profile
-spring.profiles.active=prod
+spring.profiles.active=local
 spring.profiles.include=auth
