--- a/BE/server/src/main/resources/application.properties
+++ b/BE/server/src/main/resources/application.properties
@@ -1,6 +1,14 @@
-
 #mysql 셋팅
+pring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/issue_tracker?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=dev
 spring.datasource.password=dev1234
 spring.datasource.initialization-mode=always
+
+
+# 실행 쿼리 보기 설정
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#테이블 자동 생성 설정
+spring.jpa.hibernate.ddl-auto=create-drop
