--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 ##docker
 spring.datasource.url=jdbc:mysql://localhost:3306/issue_tracker
 spring.datasource.username=root
@@ -10,3 +9,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ##debug
 logging.level.com.codesqaude.cocomarco=debug
 logging.level.sql=DEBUG
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
