--- a/BE/server/src/main/resources/application.properties
+++ b/BE/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #mysql 셋팅
-pring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # 실행 쿼리 보기 설정
 spring.jpa.show-sql=true
