--- a/iOS/issueTracker/Podfile
+++ b/iOS/issueTracker/Podfile
@@ -4,6 +4,7 @@
 target 'issueTracker' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
+pod 'Alamofire', '~> 5.4'
 pod 'SwiftLint'
   # Pods for issueTracker
 
