--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 # data source
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.sql.init.data-locations=classpath:data.sql
-spring.sql.init.enabled=true
+spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
 # logging
