--- a/BE/issuetracker/build.gradle
+++ b/BE/issuetracker/build.gradle
@@ -17,6 +17,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'mysql:mysql-connector-java'
+	implementation 'com.auth0:java-jwt:3.16.0'
+	testImplementation 'org.mockito:mockito-all:1.10.19'
 }
 
 test {
