--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/path-to-regexp": "^1",
     "@types/react-router-dom": "^5.1.7",
     "typescript": "^4.3.2"
   }
