feat: :sparkles: 전체 선택 전체 해제 구현

--- a/FE/issue-tracker/tsconfig.json
+++ b/FE/issue-tracker/tsconfig.json
@@ -20,7 +20,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "baseUrl": ".",
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "downlevelIteration": true
   },
   "include": [
     "src"
