--- a/BE/issue_tracker/build.gradle
+++ b/BE/issue_tracker/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.1'
+	testImplementation group: 'com.squareup.okhttp3', name: 'mockwebserver', version: '4.9.1'
+	testImplementation "io.projectreactor:reactor-test:3.2.3.RELEASE"
 
 	implementation 'com.auth0:java-jwt:3.16.0'
 }
