--- a/frontend/issue-cracker/package.json
+++ b/frontend/issue-cracker/package.json
@@ -23,6 +23,7 @@
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -52,6 +53,7 @@
   "devDependencies": {
     "@types/qs": "^6.9.6",
     "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.20.0",
