--- a/FE/frontend/package.json
+++ b/FE/frontend/package.json
@@ -12,10 +12,12 @@
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "axios": "^0.21.1",
+    "qs": "^6.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.17.0",
     "react-router-dom": "^5.2.0",
+    "react-router-prop-types": "^1.0.5",
     "react-scripts": "4.0.3",
     "recoil": "^0.3.1",
     "styled-components": "^5.3.0",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/qs": "^6.9.6",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9"
   }
