--- a/FE/frontend/package.json
+++ b/FE/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "axios": "^0.21.1",
+    "moment": "^2.29.1",
     "qs": "^6.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
