--- a/FE/issue-tracker/package.json
+++ b/FE/issue-tracker/package.json
@@ -17,6 +17,7 @@
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
+    "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
