[#44] fix :bug: fe는 User-Agent 전부 허용으로 변경

--- a/BE/server/src/main/resources/application.properties
+++ b/BE/server/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #테이블 자동 생성 설정
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 
 # profile
 spring.profiles.active=local
