[#78] feat : :sparkles: 도메인에 테이블명, 컬럼, 매핑 구현
- spring.jpa.hibernate.ddl-auto=validate 로 우선 커밋하고
  create할 수 있는 방법 확인 필요

--- a/BE/server/src/main/resources/application.properties
+++ b/BE/server/src/main/resources/application.properties
@@ -6,8 +6,14 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #테이블 자동 생성 설정
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=validate
 
 # profile
 spring.profiles.active=local
 spring.profiles.include=oauth
+
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLInnoDBDialect
+#hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLInnoDBDialect
