--- a/frontend/issue-cracker/package.json
+++ b/frontend/issue-cracker/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.3.1",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.1.2",
