--- a/FE/package.json
+++ b/FE/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^12.20.14",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
+    "jwt-decode": "^3.1.2",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/qs": "^6.9.6",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9"
   }
