--- a/iOS/Issue-Trackker/Issue-Trackker.xcodeproj/xcshareddata/xcschemes/Issue-Trackker.xcscheme
+++ b/iOS/Issue-Trackker/Issue-Trackker.xcodeproj/xcshareddata/xcschemes/Issue-Trackker.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "D4F09F2226788C1300240AA3"
+               BuildableName = "Issue-TrackkerNetworkTests.xctest"
+               BlueprintName = "Issue-TrackkerNetworkTests"
+               ReferencedContainer = "container:Issue-Trackker.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
