--- a/FE/issue-tracker/package.json
+++ b/FE/issue-tracker/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.6",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
+    "@uiw/react-md-editor": "^3.3.6",
     "craco-alias": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
