--- a/BE/server/src/main/resources/application.properties
+++ b/BE/server/src/main/resources/application.properties
@@ -7,13 +7,9 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #테이블 자동 생성 설정
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 
 # profile
 spring.profiles.active=local
 spring.profiles.include=oauth
 
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLInnoDBDialect
-#hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLInnoDBDialect
