chore: (#35) build.gradle에 aws 관련 의존성 추가

--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation 'com.querydsl:querydsl-jpa'
 	implementation 'com.auth0:java-jwt:3.8.2'
 	implementation 'org.projectlombok:lombok'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.1.RELEASE'
 	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
