feat: (#28) jasypt를 통해 프로젝트 키 암호화

--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	implementation 'com.auth0:java-jwt:3.8.2'
 	implementation 'org.projectlombok:lombok'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.1.RELEASE'
+	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
 	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
