chore: (#60) profile을 production 모드로 변경

--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -8,5 +8,5 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 server.error.include-message=always
 
 # profile
-spring.profiles.active=local
+spring.profiles.active=prod
 spring.profiles.include=auth
