feat: Migration to MySql

--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -5,20 +5,13 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # DB DB connection 설정
-# DB_CLOSE_ON_EXIT : 인메모리 DB의 종료마저도 스프링 부트가 관리.
-spring.datasource.url=jdbc:h2:mem://localhost/~/issuetracker;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost/issue_tracker
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=scott
+spring.datasource.password=tiger
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# 서버 시작 시점 db table drop후 다시 생성
-spring.jpa.hibernate.ddl-auto=create-drop
-
-# h2 db console 접근 설정
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# 서버 시작 시점 db schema 관리
+spring.jpa.hibernate.ddl-auto=create
 
 #logging level
 logging.level.com.codesquad.issuetracker.milestone=DEBUG
