--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -17,19 +17,23 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/libs-milestone'}
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.querydsl:querydsl-jpa'
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-	compileOnly "com.github.ulisesbocchio:jasypt-spring-boot-starter:1.17"
+    implementation "com.github.ulisesbocchio:jasypt-spring-boot-starter:1.17"
 }
+
+dependencyManagement { imports { mavenBom 'org.springframework.cloud:spring-cloud-aws:2.2.1.RELEASE' } }
 
 
 test {
