fix: (#60) 빌드 방식 변경
- plain jar 파일 생성 방지를 위해 bootjar로 변경

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
         working-directory: ./BE
         
       - name: Build with Gradle 
-        run: ./gradlew build -x test 
+        run: ./gradlew bootjar -x test
         shell: bash
         working-directory: ./BE
         
