feat: 로그인 시 로그인유저가 로그인 테이블에 없다면 자동으로 저장하는 로직 추가

--- a/be/.gitignore
+++ b/be/.gitignore
@@ -187,3 +187,4 @@ gradle-app.setting
 /gradle/wrapper/gradle-wrapper.jar
 /gradle/wrapper/gradle-wrapper.properties
 /src/main/resources/oauth.properties
+/build.sh
