fix: (#60) nohup log 관련 에러 해결

--- a/BE/appspec.yml
+++ b/BE/appspec.yml
@@ -12,7 +12,7 @@ permissions:
     mode: 755
 hooks:
   AfterInstall:
-    - location: deploy.sh
+    - location: after.sh
       timeout: 60
       runas: root
 
