feat: (#60) 배포 스크립트 수정

--- a/BE/appspec.yml
+++ b/BE/appspec.yml
@@ -12,7 +12,7 @@ permissions:
     mode: 755
 hooks:
   AfterInstall:
-    - location: after.sh
+    - location: deploy.sh
       timeout: 60
       runas: root
 
