chore: 데이터베이스 초기화 전략 변경

--- a/BE/src/main/resources/application-prod.properties
+++ b/BE/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # jpa
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # data source
 spring.datasource.url=jdbc:mysql://issue-tracker-db-server.cpjw6midryqm.ap-northeast-2.rds.amazonaws.com:3306/issuetracker?autoReconnect=true
