feat: (#60) main.yml 수정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,11 @@ name: issue-tracker
 on:
   # Triggers the workflow on push or pull request events but only for the team-06 branch
   push:
-    branches: [ BE-dev ]
+    branches: 
+      - BE-dev
   pull_request:
-    branches: [ BE-dev ]
+    branches: 
+      - BE-dev
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
