--- a/FE/issue-tracker/package.json
+++ b/FE/issue-tracker/package.json
@@ -53,7 +53,7 @@
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "@types/react-router-dom": "^5.1.7",
-    "@types/styled-components": "^5.1.9",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "@types/styled-components": "^5.1.9"
   }
 }
