--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     testRuntimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation platform('software.amazon.awssdk:bom:2.15.0')
+    implementation 'software.amazon.awssdk:s3control'
 }
 
 test {
