--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.include=secret
+spring.profiles.include=secret,aws
 
 # 실행 쿼리 보기 설정
 spring.jpa.show-sql=true
@@ -11,7 +11,7 @@ spring.datasource.username=scott
 spring.datasource.password=tiger
 
 # 서버 시작 시점 db schema 관리
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #logging level
 logging.level.com.codesquad.issuetracker.milestone=DEBUG
