[#131] feat: :tada: dummy data 개발

--- a/BE/server/src/main/resources/application.properties
+++ b/BE/server/src/main/resources/application.properties
@@ -7,9 +7,11 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #테이블 자동 생성 설정
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#spring.jpa.properties.hibernate.hbm2ddl.import_files=classpath:data.sql
+spring.jpa.defer-datasource-initialization=true
 
 # profile
 spring.profiles.active=local
 spring.profiles.include=oauth
-
