--- a/BE/issue_tracker/build.gradle
+++ b/BE/issue_tracker/build.gradle
@@ -18,6 +18,7 @@ repositories {
 	mavenCentral()
 }
 
+apply plugin: 'io.spring.dependency-management'
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -27,8 +28,32 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	implementation 'com.auth0:java-jwt:3.16.0'
+
+	implementation "com.querydsl:querydsl-jpa"
+	implementation "com.querydsl:querydsl-core"
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa" // querydsl JPAAnnotationProcessor 사용 지정
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api:2.2.3"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api:1.3.5"
+
+	// 쿼리 파라미터 로그 남기기
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
+
 }
 
 test {
 	useJUnitPlatform()
+}
+
+// querydsl 적용
+def generated='src/main/generated'
+sourceSets {
+	main.java.srcDirs += [ generated ]
+}
+
+tasks.withType(JavaCompile) {
+	options.annotationProcessorGeneratedSourcesDirectory = file(generated)
+}
+
+clean.doLast {
+	file(generated).deleteDir()
 }
