chore : CORS 모든 메서드 허용

--- a/BE/issue_tracker/.gitignore
+++ b/BE/issue_tracker/.gitignore
@@ -27,7 +27,7 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
-oauth.properties
+application-oauth.properties
 
 ### NetBeans ###
 /nbproject/private/
