--- a/BE/issue_tracker/build.gradle
+++ b/BE/issue_tracker/build.gradle
@@ -40,6 +40,10 @@ dependencies {
 	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa" // querydsl JPAAnnotationProcessor 사용 지정
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api:2.2.3"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api:1.3.5"
+
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+
 }
 
 test {
