[#136] refactor: :hammer: 이슈 리팩토링, 줄맞춤, logging filter를 통해 request body 확인 할 수 있도록 변경

--- a/BE/server/src/main/resources/application.properties
+++ b/BE/server/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#request 정보
+logging.level.web=debug
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
 #mysql 셋팅
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -8,8 +12,6 @@ spring.jpa.properties.hibernate.format_sql=true
 #테이블 자동 생성 설정
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
-
-#spring.jpa.properties.hibernate.hbm2ddl.import_files=classpath:data.sql
 spring.jpa.defer-datasource-initialization=true
 
 # profile
