--- a/be/build.gradle
+++ b/be/build.gradle
@@ -18,8 +18,9 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'com.auth0:java-jwt:3.15.0'
-}
 
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.1.RELEASE'
+}
 test {
 	useJUnitPlatform()
 }
