feat: 필터를 통한 검색 시 assignee를 복수 검색이 가능하도록 수정

--- a/BE/src/main/resources/application-local.properties
+++ b/BE/src/main/resources/application-local.properties
@@ -9,4 +9,5 @@ spring.datasource.password=ENC(Luit6VhymHPBgJARK1GMnyrelsZWGHuw)
 # logging
 logging.level.com.issuetracker=DEBUG
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true spring.jpa.properties.hibernate.use_sql_comments=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
