--- a/BE/src/main/resources/application-oauth.properties
+++ b/BE/src/main/resources/application-oauth.properties
@@ -3,4 +3,4 @@
 github.client.id=${GITHUB_CLIENT_ID}
 github.client.secrets=${GITHUB_CLIENT_SECRETS}
 github.client.id.ios=${GITHUB_CLIENT_ID_IOS}
-github.client.id.secrets.ios=${GITHUB_CLIENT_SECRETS_IOS}
+github.client.secrets.ios=${GITHUB_CLIENT_SECRETS_IOS}
