test: (#65) 이슈 생성, 이슈 상세 페이지 조회 테스트 추가

--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -23,9 +23,11 @@ dependencies {
 	implementation 'org.projectlombok:lombok'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.1.RELEASE'
 	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
+	implementation 'com.google.code.gson:gson'
 	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.assertj:assertj-core:3.18.1'
 }
 
 // querydsl
