refactor : LoginController 생성자 주입 대상 변경 #19
> 생성자를 통해 Environment 빈을 주입받는 대신, @Value 어노테이션을 통해 직접 특정 값을 주입받아서 사용

--- a/BE/src/main/resources/application-oauth.properties
+++ b/BE/src/main/resources/application-oauth.properties
@@ -1,6 +1,6 @@
 
 # github
-github.client.id=${GITHUB_CLIENT_ID}
-github.client.secrets=${GITHUB_CLIENT_SECRETS}
+github.client.id.web=${GITHUB_CLIENT_ID}
+github.client.secrets.web=${GITHUB_CLIENT_SECRETS}
 github.client.id.ios=${GITHUB_CLIENT_ID_IOS}
 github.client.secrets.ios=${GITHUB_CLIENT_SECRETS_IOS}
