--- a/BE/server/build.gradle
+++ b/BE/server/build.gradle
@@ -25,8 +25,7 @@ dependencies {
 
     implementation 'com.auth0:java-jwt:3.16.0'
 
-    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
 }
 
